test/fail/char_slash.min
program
    number c := '\'
start
end
